# Python-Siri

./: .gitignore  Makefile  README.md  app.py  chat.py  pyproject.toml  utils.py
